--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Helvetica;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
@@ -7,6 +7,7 @@ body {
 .page-header {
     font-size: medium;
     padding: 20px;
+    margin-bottom: 20px;
 	display: flex;
     border: 2px solid orange;
 	flex-direction: row;
@@ -24,3 +25,28 @@ body {
     padding:0.5em;
     text-decoration:none;
 }
+.items {
+    width: 80%;
+    margin: auto;
+  
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1em;
+}
+.items img {
+    width: 100%;
+    height: auto;
+}
+.item{
+    border: 1px black solid; 
+    padding: 10px;
+    margin: 40px 0;
+    background-color: rgb(248, 252, 233);
+    font-weight:500;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
